[update] endpoints
